Fix product and footer overlap

--- a/src/styles/_phoneListPage.scss
+++ b/src/styles/_phoneListPage.scss
@@ -4,6 +4,7 @@
     grid-template-rows: auto;
     justify-items: center;
     grid-gap: 30px;
+    padding-bottom: 80px;
 }
 
 .products-title {
